--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ h2 {
 
 p {
   letter-spacing: -0.5px;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 
